--- a/pizza_project/css/styles.css
+++ b/pizza_project/css/styles.css
@@ -754,6 +754,424 @@ img{
   bottom: 3rem; 
 }
 
+/* ====== BREAKPOINTS ====== */ 
+/* For Small Devices */ 
+@media screen and (max-width: 320px){
+  .container{
+    margin-inline: 1rem;
+  }
+
+  .products__container{
+    grid-template-columns: 150px;
+    justify-content: center; 
+  }
+
+  .footer__form{
+    background-color: transparent;
+    box-shadow: none;
+    flex-direction: column;
+    row-gap:1rem;
+    padding: 0;
+  }
+
+  .footer__input{
+    background-color: var(--container-color);
+    box-shadow: 0 4px 16px hsla(353,100%,8%,.1);
+    padding: .75rem 1rem; 
+    border-radius: 4rem;
+  }
+}
+
+/* For Medium Devices */ 
+@media screen and (max-width: 576px){
+  .home__container,
+  .about__container,
+  .popular__container,
+  .reciper__container{
+    grid-template-columns: 380px;
+    justify-content: center;
+  }
+
+  .products__container{
+    grid-template-columns: repeat(2,160px);
+    justify-content: center;
+  }
+
+  .contact__container{
+    width: 450px;
+    margin-inline: auto;
+  }
+
+  .footer__form{
+    width: 360px;
+  }
+}
+
+@media screen and (min-width: 768px){
+  .popular__swiper{
+    width: 600px;
+    overflow-x: clip;
+    justify-self: center;
+  }
+
+  .products__container{
+    grid-template-columns: repeat(3,160px);
+    justify-content: center;
+  }
+
+  .footer__content{
+    grid-template-columns: repeat(2,1fr);
+    justify-items: center;
+  }
+
+  .footer__content div:nth-child(3){
+    grid-column: 1/3;
+  }
+
+  .footer__title{
+    text-align: center;
+  }
+
+  .footer__social,
+  .footer__pay{
+    column-gap: 1.5rem;
+  }
+}
+
+/* For Large Devices */ 
+@media screen and (min-width: 1150px){
+  .container{
+    margin-inline: auto;
+  }
+
+  .header{
+    height: 4rem;
+    align-content: center;
+  }
+
+  .nav__logo div{
+    white-space: nowrap;  
+    font-size: 2rem;
+  }
+
+  .nav__logo,
+  .nav__logo img{
+    width:50px; 
+  }
+
+  .section{
+    padding-block: 7rem 2rem;
+  }
+
+  .section__title{
+    margin-bottom: 4rem;
+  }
+
+  .nav{
+    height: calc(var(--header-height)+ 2rem);
+  }
+
+  .nav__toggle,
+  .nav__close{
+    display:none;
+  }
+
+  .nav__list{
+    flex-direction: row;
+    column-gap: 4rem;
+  }
+
+  .home__container{
+    grid-template-columns: 515px 555px;
+    column-gap: 3rem;
+    align-items: start;
+    padding-block: 10rem 4rem;
+  }
+
+  .home__data{
+    text-align: initial; 
+    margin-top: 2rem;
+  }
+
+  .home__description{
+    margin-bottom: 3.5rem;
+    padding-right: 6rem;
+  }
+
+  .home__sticker-1,
+  .home__sticker-2{
+    width: 50px;
+  }
+
+  .home__sticker-1{
+    right: 3rem; 
+    top:1rem;
+    bottom: 0rem;
+  }
+
+  .home__sticker-2{
+    left: 16rem;
+    bottom: 3rem;
+  }
+
+  .home__board,
+  .home__pizza{
+    width: 520px;
+  }
+
+  .home__board{
+    bottom: -1rem;
+  }
+
+  .home__ingredient{
+    width: 100px;
+  }
+
+  .home__leaf-1{
+    top: -2rem;
+  }
+
+  .home__pepperoni{
+    right: -1rem;
+    top: 3.5rem;
+  }
+
+  .home__mushroom{
+    right:-1rem ; 
+    bottom: 3.5rem;
+  }
+
+  .home__olive{
+    bottom: -2rem;
+  }
+
+  .home__leaf-2{
+    left: -1rem;
+    bottom: 3.5rem;
+  }
+
+  .home__tomato{
+    left: -1rem;
+    top: 3.5rem;
+  }
+
+  .about__container{
+    grid-template-columns: 450px 440px;
+    align-items: center;
+    justify-content: center; 
+    column-gap: 6rem;
+  }
+
+  .about__img{
+    order:-1;
+    width: 450px;
+  }
+
+  .about__data{
+    text-align: initial;
+  }
+
+  .about__data .section__title{
+    margin-bottom: 1.5rem;
+    text-align:initial;
+  }
+
+  .about__description{
+    margin-bottom: 3.5rem;
+  }
+
+  .about__sticker{
+    width: 50px;
+    right: 6rem;
+    bottom: 4rem;
+  }
+
+  .popular__container{
+    grid-template-columns: 470px;
+    row-gap:5rem;
+    padding-bottom: 3rem;
+    justify-content: center;
+  }
+
+  .popular__data .section__title{
+    margin-bottom: 1.5rem;
+  }
+
+  .popular__swiper{
+    width: 1000px;
+  }
+
+  .popular__card,
+  .popular__img{
+    width: 350px;
+    justify-self: center;
+  }
+
+  .popular__dish{
+    width: 390px;
+    top:-1.5rem;
+  }
+
+  .popular__title{
+    margin-top: 3rem;
+    font-size: var(--h2-font-size);
+  }
+
+  .recipe__container{
+    grid-template-columns: 360px 550px;
+    align-items: center;
+    column-gap: 6rem;
+    padding-bottom: 3rem;
+  }
+
+  .recipe__ingredient{
+    column-gap: 1.5rem;
+  }
+
+  .recipe__image{
+    width: 80px;
+  }
+
+  .recipe__name{
+    font-size: var(--h3-font-size);
+  }
+
+  .recipe__description{
+    font-size: var(--normal-font-size);
+  }
+
+  .recipe__img{
+    width: 550px;
+  }
+
+  .products__container{
+    grid-template-columns: repeat(3,250px);
+    gap: 7.5rem 4rem;
+  }
+
+  .products__card{
+    padding: 10rem 1.5rem 1.5rem;
+    border-radius: 2rem;
+  }
+
+  .products__img{
+    width: 200px;
+    top: -4rem;
+  }
+
+  .products__name{
+    font-size: var(--h2-font-size);
+  }
+
+  .products__button{
+    right: 1.5rem;
+    bottom: 1.5rem;
+    padding: 6px;
+  }
+
+  .contact__container{
+    grid-template-columns: repeat(2,1fr);
+    border-radius: 4rem;
+    padding-top: 2rem;
+    column-gap: 0;
+  }
+
+  .contact__image{
+    order: -1;
+  }
+
+  .contact__img{
+    width: 400px;
+    order: -1; 
+  }
+
+  .contact__info{
+    row-gap: 1rem;
+  }
+
+  .contact__info .section__title{
+    margin: 0;
+    font-size: 3rem; 
+    align-self: center; 
+    justify-self: center;
+  }
+
+  .contact__info .contact__title{
+    font-size: 2rem;
+    margin: .5rem;
+  }
+
+  .contact__social{
+    gap: 2rem; 
+  }
+  .contact__social-link{
+    font-size: 2rem;
+  }
+
+  .contact__sticker-1,
+  .contact__sticker-3{
+    width: 70px;
+  }
+
+  .contact__sticker-1{
+    left: 32rem;
+    top: 4rem;
+  }
+
+  .contact__sticker-2{
+    width: 80px;
+    left: 36rem; 
+    top: 15rem; 
+  }
+
+  .contact__sticker-3{
+    left: 35rem;
+    bottom: 4rem;
+  }
+
+  .footer{
+    padding-bottom: 3rem;
+  }
+
+  .footer__content{
+    grid-template-columns: repeat(3,1fr);
+  }
+
+  .footer__content div:nth-child(3){
+    grid-column: initial;
+  }
+
+  .footer__content div:nth-child(2){
+    order: 1; 
+    justify-self: center;
+  }
+
+  .footer__content div:nth-child(1){
+    justify-self: center;
+  }
+
+  .footer__title{
+    font-size: 1.5rem; 
+  }
+
+  .footer__social{
+    gap: 2rem;
+  }
+
+  .footer__social-link{
+    font-size: 2.25rem;
+  }
+
+  .footer__pay-img{
+    width: 3rem; 
+  }
+
+  .scrollup{
+    right: 3rem;
+  }
+}
+
+
 
 
 
